FEATURE: Optional filtered replies view (#11387)
See PR for details

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -725,6 +725,10 @@ posting:
       ja: true
   max_consecutive_replies:
     default: 3
+  enable_filtered_replies_view:
+    default: false
+    client: true
+    hidden: true
   title_prettify:
     default: true
     locale_default:
