--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -2146,6 +2146,10 @@ uncategorized:
     default: 180
     max: 36500
 
+  delete_merged_stub_topics_after_days:
+    default: 7
+    min: 0
+
   backup_drafts_to_pm_length:
     default: 0
     hidden: true
